--- a/styles/main.css
+++ b/styles/main.css
@@ -80,6 +80,7 @@ button a {
   background-color: rgba(9, 44, 9, 0.651);
 }
 
+/**********SECTION HEADER****************/
 .header__wrapper-top {
   padding: 1.0416666667vw 0 0;
 }
@@ -125,6 +126,7 @@ button a {
   color: #386641;
 }
 
+/********************************/
 .dropdown {
   font-family: Raleway;
   background-color: #386641;
@@ -240,7 +242,7 @@ button a {
   display: initial;
 }
 
-/****SECTION HERO******/
+/**********SECTION HERO****************/
 .section-hero {
   max-width: 100vw;
   background-color: white;
@@ -255,20 +257,10 @@ button a {
   align-items: center;
   justify-content: space-between;
 }
-
-.hero-description {
-  margin-left: 18.2291666667vw;
-  font-size: 1.0416666667vw;
-  line-height: 1.6;
-  margin-bottom: 0.5208333333vw;
-  margin-top: 1.5625vwx;
-}
-
-.hero-img {
+.hero__img-box__img {
   width: 100%;
 }
-
-.heading-primary {
+.hero__text-box__primary {
   font-weight: 800;
   color: #333;
   letter-spacing: -0.0260416667vw;
@@ -278,8 +270,7 @@ button a {
   margin-top: 4.1666666667vw;
   margin-bottom: 1.0416666667vw;
 }
-
-.tag-title {
+.hero__text-box__tag-title {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 1.1458333333vw;
@@ -288,50 +279,61 @@ button a {
   margin-top: 1.0416666667vwx;
   color: #386641;
 }
-
-.hero-text-box .btn {
+.hero__text-box__description {
+  margin-left: 18.2291666667vw;
+  font-size: 1.0416666667vw;
+  line-height: 1.6;
+  margin-bottom: 0.5208333333vw;
+  margin-top: 1.5625vwx;
+}
+.hero__text-box__btn {
   float: right;
   margin-right: 12.5vw;
 }
 
-/*********QUALITY*/
-.section-quality {
+/**********QUALITY****************/
+.section-mark-quality {
   max-width: 100vw;
+  height: 7.8125vw;
   padding: 0 auto;
   background-color: #dce4cc;
 }
 
-.container {
-  font-size: 0.7291666667vw;
-  text-transform: uppercase;
-  letter-spacing: 0.0390625vw;
-  font-weight: 500;
+.mark-quality__container {
   text-align: center;
 }
-
-.logos {
+.mark-quality__container__logos {
   display: flex;
   justify-content: center;
 }
-.logos img {
-  height: 100%;
+.mark-quality__container__logos img {
+  height: 150px;
+  width: 314px;
 }
 
+/**********SERVICES ****************/
 .section-services {
-  background-image: url("../images/image 32.png");
+  background-image: url("../images/image-services.png");
   grid-template-rows: 0.5fr 2fr;
   align-items: center;
 }
 
-.heading-first {
+.services {
+  background-color: rgba(242, 248, 244, 0.884);
+}
+.services__text-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.services__text-box__first {
   font-weight: 800;
   color: #333;
   letter-spacing: -0.0260416667vw;
   font-size: 2.8125vw;
   line-height: 1.05;
 }
-
-.hero-second {
+.services__text-box__second {
   height: 5vw;
   width: 30.2083333333vw;
   font-size: 0.8333333333vw;
@@ -340,18 +342,7 @@ button a {
   line-height: 1.6;
   font-weight: 500;
 }
-
-.color {
-  background-color: rgba(242, 248, 244, 0.884);
-}
-
-.services-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.gallery {
+.services__gallery {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 0.8333333333vw;
@@ -359,16 +350,22 @@ button a {
   padding-left: 19.2708333333vw;
   padding-right: 19.2708333333vw;
 }
-
-.gallery-item {
+.services__gallery__transform {
+  display: block;
+  width: 100%;
+  transition: all 0.4s;
+}
+.services__gallery__transform:hover {
+  transform: scale(1.05);
+}
+.services__gallery__transform__item {
   overflow: hidden;
 }
-.gallery-item img {
+.services__gallery__transform__item img {
   display: block;
   width: 100%;
 }
-
-.gallery-content {
+.services__gallery__transform__content {
   font-family: Raleway;
   font-style: 500;
   font-size: 0.8333333333vw;
@@ -382,8 +379,7 @@ button a {
   transition: 0.5s;
   background-color: white;
 }
-
-.tag {
+.services__gallery__transform__tag {
   display: block;
   font-weight: 700;
   font-size: 0.9375vw;
@@ -391,15 +387,7 @@ button a {
   color: #202020;
 }
 
-.gallery-transform {
-  display: block;
-  width: 100%;
-  transition: all 0.4s;
-}
-.gallery-transform:hover {
-  transform: scale(1.05);
-}
-
+/**********VIDEO****************/
 .section-video {
   max-width: 100vw;
   height: 27.0833333333vw;
@@ -407,55 +395,43 @@ button a {
   margin-top: 0 auto;
   position: relative;
 }
-
-.video {
+.section-video .video {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-
-.video-primary {
+.section-video .video__text-box {
+  color: white;
+}
+.section-video .video__text-box__primary {
   width: 27.8645833333vw;
   height: 2.7083333333vw;
   font-size: 2.2916666667vw;
   line-height: 1.05;
   margin-top: 4.6875vw;
 }
-
-.paragraph {
+.section-video .video__text-box__paragraph {
   height: 8.8020833333vw;
   width: 27.8645833333vw;
   margin-bottom: 1.5625vw;
 }
-
-.video-description {
+.section-video .video__text-box__paragraph__description {
   font-size: 0.9375vw;
   line-height: 1.6;
   margin-bottom: 1.0416666667vw;
   font-weight: 500;
 }
-
-.video-img {
+.section-video .video__text-box__btn {
+  margin-bottom: 4.6875vw;
+}
+.section-video .video__img-box__video-img {
   height: 15.3645833333vw;
   width: 27.34375vw;
   border: 1.0416666667vw solid white;
   margin-top: 4.84375vw;
   margin-bottom: 4.7916666667vw;
 }
-
-.video-text-box {
-  color: white;
-}
-
-span {
-  color: yellow;
-  font-weight: 900;
-  font-size: 1.25vw;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-
-.vector-img {
+.section-video .video__img-box__button-img {
   position: absolute;
   margin-top: 12.34375vw;
   bottom: 12.2395833333vw;
@@ -464,10 +440,15 @@ span {
   width: 1.9791666667vw;
 }
 
-.video-btn {
-  margin-bottom: 4.6875vw;
+.years {
+  color: yellow;
+  font-weight: 900;
+  font-size: 1.25vw;
+  text-transform: uppercase;
+  font-weight: 700;
 }
 
+/**********FAVORITES ****************/
 .favorites {
   background: #f5f5f5;
 }
@@ -480,13 +461,13 @@ span {
   padding-top: 2.6041666667vw;
 }
 
-.favorites__body {
+.favorites__box {
   padding: 3.125vw 0;
   text-align: center;
   width: 60.9375vw;
 }
 
-.favorites__carousel {
+.favorites__slideshow {
   margin-bottom: 1.5625vw;
   display: flex;
   justify-content: space-between;
@@ -501,7 +482,7 @@ span {
   width: 9.1145833333vw;
 }
 
-.tree__body {
+.tree__primary {
   margin: 0 auto;
   position: relative;
   display: flex;
@@ -513,24 +494,24 @@ span {
   border-radius: 0.5208333333vw;
   transition: 0.7s;
 }
-.tree__body h3 {
+.tree__primary h3 {
   font-weight: 700;
   font-size: 1.1458333333vw;
   line-height: 1.5625vw;
   color: #202020;
   margin-bottom: 0.78125vw;
 }
-.tree__body:hover {
+.tree__primary:hover {
   background: #386641;
 }
-.tree__body:hover > .tree__hover {
+.tree__primary:hover > .tree__hover {
   opacity: 1;
 }
-.tree__body:hover > .tree__img {
+.tree__primary:hover > .tree__img {
   opacity: 0.4;
 }
-.tree__body .tree__btn,
-.tree__body .tree__btn a {
+.tree__primary .tree__btn,
+.tree__primary .tree__btn a {
   text-decoration: none;
   padding: 0 auto;
   margin-left: 0;
@@ -601,7 +582,7 @@ span {
   transform: rotate(180deg) translate(-60.9375vw, -1.3020833333vw);
 }
 
-/*Testimonaals*/
+/**********Testimonaals ****************/
 .container-min {
   min-width: 52.0833333333vw;
   margin: 0 auto;
