--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,10 @@ body {
   color: #555;
   overflow-x: hidden;
 }
+.container-min {
+  min-width: 1000 / $width * 100vw;
+  margin: 0 auto;
+}
 .container-medium {
   max-width: 1170 / $width * 100vw;
   margin: 0 auto;
@@ -55,7 +59,7 @@ button a {
     transition: all 0.3s;
     color: #fff;
   }
-  &:visited:not(.subscribe__btn) {
+  &:visited:not(.forms__btn) {
     display: inline-block;
     font-weight: 600;
     font-family: Raleway;
@@ -70,10 +74,10 @@ button a {
     transition: all 0.3s;
     color: #fff;
   }
-  &:hover:not(.subscribe__btn) {
+  &:hover:not(.forms__btn) {
     background-color: rgba(9, 44, 9, 0.651);
   }
-  &:active:not(.subscribe__btn) {
+  &:active:not(.forms__btn) {
     background-color: rgba(9, 44, 9, 0.651);
   }
 }
@@ -320,8 +324,8 @@ button a {
     display: flex;
     justify-content: center;
     img {
-      height: 150px;
-      width: 314px;
+      height: 150 / $width * 100vw;
+      width: 314 / $width * 100vw;
     }
   }
 }
@@ -474,108 +478,106 @@ button a {
     justify-content: center;
     padding-top: 50 / $width * 100vw;
   }
-}
-
-.favorites__box {
-  padding: 60 / $width * 100vw 0;
-  text-align: center;
-  width: 1170 / $width * 100vw;
-}
-.favorites__slideshow {
-  margin-bottom: 30 / $width * 100vw;
-  display: flex;
-  justify-content: space-between;
+  &__box {
+    padding: 60 / $width * 100vw 0;
+    text-align: center;
+    width: 1170 / $width * 100vw;
+  }
+  &__slideshow {
+    margin-bottom: 30 / $width * 100vw;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 .tree {
   display: flex;
   flex-shrink: 0;
-  /*margin: 0 auto;*/
   margin-right: 10 / $width * 100vw;
-  background-size: 100 / $width * 100vw 200 / $width * 100vw;
-  width: 175 / $width * 100vw;
-}
+  &__primary {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 410 / $width * 100vw;
+    width: 285 / $width * 100vw;
+    background-color: #eee;
+    border-radius: 10 / $width * 100vw;
+    transition: 0.7s;
+    h3 {
+      margin-top: 30 / $width * 100vw;
+      font-weight: 700;
+      font-size: 22 / $width * 100vw;
+      line-height: 30 / $width * 100vw;
+      color: #202020;
+      margin-bottom: 25 / $width * 100vw;
+    }
+    &:hover {
+      background: #386641;
+      > .tree__hover {
+        opacity: 1;
+      }
+      > .tree__img {
+        opacity: 0.4;
+      }
+    }
+  }
 
-.tree__primary {
-  margin: 0 auto;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 270 / $width * 100vw;
-  height: 380 / $width * 100vw;
-  background-color: #eee;
-  border-radius: 10 / $width * 100vw;
-  transition: 0.7s;
-  h3 {
-    font-weight: 700;
-    font-size: 22 / $width * 100vw;
-    line-height: 30 / $width * 100vw;
-    color: #202020;
-    margin-bottom: 15 / $width * 100vw;
-  }
-  &:hover {
-    background: #386641;
-    > .tree__hover {
-      opacity: 1;
-    }
-    > .tree__img {
-      opacity: 0.4;
-    }
-  }
-  .tree__btn,
-  .tree__btn a {
+  &__btn,
+  &__btn a {
     text-decoration: none;
     padding: 0 auto;
-    margin-left: 0;
+    margin-left: 30 / $width * 100vw;
+    margin-right: 30 / $width * 100vw;
     margin-bottom: 10 / $width * 100vw;
     text-align: center;
     display: flex;
     align-self: center;
   }
-}
 
-.tree__img {
-  position: absolute;
-  width: 225 / $width * 100vw;
-  bottom: 0;
-  z-index: 1;
-  transition: 0.7s;
-  img {
-    -o-object-fit: contain;
-    object-fit: contain;
-    display: inline-block;
-  }
-}
-.tree__hover {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  opacity: 0;
-  z-index: 2;
-  transition: 0.7s;
-  p {
-    font-size: 14 / $width * 100vw;
-    line-height: 21 / $width * 100vw;
-    color: #fff;
-    font-weight: 500;
-  }
-}
-.tree__price {
-  margin-top: 7 / $width * 100vw;
-  flex-grow: 1;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: #fff;
-  p {
-    &:first-child {
-      line-height: 24 / $width * 100vw;
-      opacity: 0.6;
+  &__img {
+    position: absolute;
+    width: 225 / $width * 100vw;
+    bottom: 0;
+    z-index: 1;
+    transition: 0.7s;
+    img {
+      display: inline-block;
+      object-fit: contain;
     }
-    &:last-child {
-      font-size: 20 / $width * 100vw;
-      line-height: 30 / $width * 100vw;
+  }
+  &__hover {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    opacity: 0;
+    z-index: 2;
+    transition: 0.7s;
+    margin-left: 30 / $width * 100vw;
+    margin-right: 30 / $width * 100vw;
+    p {
+      font-size: 14 / $width * 100vw;
+      line-height: 21 / $width * 100vw;
+      color: #fff;
+      font-weight: 500;
+    }
+  }
+  &__price {
+    margin-top: 7 / $width * 100vw;
+    flex-grow: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    p {
+      &:first-child {
+        line-height: 24 / $width * 100vw;
+        opacity: 0.6;
+      }
+      &:last-child {
+        font-size: 20 / $width * 100vw;
+        line-height: 30 / $width * 100vw;
+      }
     }
   }
 }
@@ -596,21 +598,16 @@ button a {
 }
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-/**********Testimonaals ****************/
-.container-min {
-  min-width: 1000 / $width * 100vw;
-  margin: 0 auto;
-}
+/**********REVIEWS ****************/
 
-.testimonials {
+.reviews {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.524), rgba(0, 0, 0, 0.7)),
-    url("../images/Rectangle 101.png") no-repeat;
+    url("../images/garden.png") no-repeat;
   background-size: cover;
   position: relative;
 
   &__body {
     margin: 0 auto;
-
     padding: 60 / $width * 100vw 0;
     display: flex;
     color: #fff;
@@ -618,8 +615,8 @@ button a {
     line-height: 36 / $width * 100vw;
   }
 }
-.testimonials__prev,
-.testimonials__next {
+.reviews__prev,
+.reviews__next {
   position: absolute;
   background-color: transparent;
   width: 27 / $width * 100vw;
@@ -629,12 +626,12 @@ button a {
   transform: translate(400 / $width * 100vw, 25 / $width * 100vw);
   z-index: 10;
 }
-.testimonials__next {
+.reviews__next {
   transform: rotate(180deg)
     translate(-1490 / $width * 100vw, -25 / $width * 100vw);
 }
 
-.testimonial {
+.response {
   &__body {
     max-width: 1000 / $width * 100vw;
     margin: 0 auto;
@@ -680,10 +677,12 @@ button a {
       rgba(0, 0, 0, 0.25);
   }
 }
-/* Subscribe*/
-.subscribe {
+
+///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+/**********Subscribe ****************/
+.forms {
   max-width: 1920 / $width * 100vw;
-  background: url("../images/image\ 32.png") no-repeat;
+  background: url("../images/image-services.png") no-repeat;
   background-size: cover;
   &__body {
     padding: 50 / $width * 100vw 0 60 / $width * 100vw 0;
@@ -737,8 +736,12 @@ button a {
     top: 0;
   }
 }
-/* FOOTER*/
+.container-color {
+  background-color: rgba(242, 248, 244, 0.884);
+}
 
+///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+/**********FOOTER ****************/
 .footer {
   background: #fff;
   margin-top: 80 / $width * 100vw;
