--- a/scss/main.scss
+++ b/scss/main.scss
@@ -411,7 +411,7 @@ button a {
 .section-video {
   max-width: 1920 / $width * 100vw;
   height: 520 / $width * 100vw;
-  background-image: url("../images/Rectangle 101.png");
+  background-image: url("../images/garden.png");
   margin-top: 0 auto;
   position: relative;
   .video {
@@ -679,7 +679,7 @@ button a {
 }
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-/**********Subscribe ****************/
+/**********FORMS ****************/
 .forms {
   max-width: 1920 / $width * 100vw;
   background: url("../images/image-services.png") no-repeat;
@@ -751,109 +751,106 @@ button a {
     justify-content: space-between;
   }
 
+  .widget {
+    &__info {
+      margin-bottom: 35 / $width * 100vw;
+      line-height: 26 / $width * 100vw;
+
+      h2,
+      h3 {
+        margin-bottom: 15 / $width * 100vw;
+        font-size: 16 / $width * 100vw;
+        font-weight: 700;
+        line-height: 19 / $width * 100vw;
+        color: #386641;
+        text-transform: uppercase;
+      }
+
+      li {
+        line-height: 35 / $width * 100vw;
+        list-style: none;
+      }
+
+      p {
+        margin-bottom: 35 / $width * 100vw;
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+      a {
+        font-weight: 500;
+        font-size: 16 / $width * 100vw;
+        line-height: 35 / $width * 100vw;
+        color: #000;
+        text-decoration: none;
+        &:hover {
+          text-decoration: underline;
+          color: #386641;
+        }
+      }
+
+      &--right {
+        text-align: right;
+        margin-bottom: 0;
+      }
+    }
+    &__social-networks {
+      display: flex;
+      justify-content: right;
+      &__ithem {
+        flex-shrink: 0;
+        margin: 6 / $width * 100vw;
+        width: 42 / $width * 100vw;
+        height: 42 / $width * 100vw;
+        border-radius: 50%;
+        transition: 0.7s;
+        background: #ffd401;
+        &:hover {
+          background: #386641;
+        }
+
+        img {
+          margin: 11 / $width * 100vw;
+          width: 20 / $width * 100vw;
+          height: 20 / $width * 100vw;
+          filter: brightness(0) invert(10);
+        }
+      }
+    }
+  }
   &__copyright {
     padding-top: 10 / $width * 100vw;
     padding-bottom: 10 / $width * 100vw;
     background: #454751;
     font-weight: 400;
-  }
-  &__row {
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  &__text,
-  &__text a {
-    height: 26 / $width * 100vw;
-    width: 212 / $width * 100vw;
-    font-size: 14 / $width * 100vw;
-    line-height: 26 / $width * 100vw;
-    color: #c0c0c0;
-
-    a:hover {
-      color: #fff;
-    }
-  }
-
-  &__terms,
-  &__terms a {
-    font-size: 12 / $width * 100vw;
-    line-height: 20 / $width * 100vw;
-    color: #adbdcc;
-    a:hover {
-      color: #fff;
-    }
-  }
-}
-
-.widget {
-  a {
-    font-weight: 500;
-    font-size: 16 / $width * 100vw;
-    line-height: 35 / $width * 100vw;
-    color: #000;
-    text-decoration: none;
-    &:hover {
-      text-decoration: underline;
-      color: #386641;
-    }
-  }
-
-  &__body {
-    margin-bottom: 35 / $width * 100vw;
-    line-height: 26 / $width * 100vw;
-
-    h2,
-    h3 {
-      margin-bottom: 15 / $width * 100vw;
-      font-size: 16 / $width * 100vw;
-      font-weight: 700;
-      line-height: 19 / $width * 100vw;
-      color: #386641;
-      text-transform: uppercase;
+    &__row {
+      text-align: center;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
 
-    li {
-      line-height: 35 / $width * 100vw;
-      list-style: none;
-    }
+    &__text,
+    &__text a {
+      height: 26 / $width * 100vw;
+      width: 212 / $width * 100vw;
+      font-size: 14 / $width * 100vw;
+      line-height: 26 / $width * 100vw;
+      color: #c0c0c0;
 
-    p {
-      margin-bottom: 35 / $width * 100vw;
-      &:last-child {
-        margin-bottom: 0;
+      a:hover {
+        color: #fff;
       }
     }
 
-    &--right {
-      text-align: right;
-      margin-bottom: 0;
-    }
-  }
-  &__socials {
-    display: flex;
-    justify-content: right;
-  }
-
-  &__socials-ithem {
-    flex-shrink: 0;
-    margin: 6 / $width * 100vw;
-    width: 42 / $width * 100vw;
-    height: 42 / $width * 100vw;
-    border-radius: 50%;
-    transition: 0.7s;
-    background: #ffd401;
-    &:hover {
-      background: #386641;
-    }
-
-    img {
-      margin: 11 / $width * 100vw;
-      width: 20 / $width * 100vw;
-      height: 20 / $width * 100vw;
-      filter: brightness(0) invert(10);
+    &__terms,
+    &__terms a {
+      font-size: 12 / $width * 100vw;
+      line-height: 20 / $width * 100vw;
+      color: #adbdcc;
+      a:hover {
+        color: #fff;
+      }
     }
   }
 }
