--- a/styles/main.css
+++ b/styles/main.css
@@ -356,8 +356,9 @@ button a {
   padding-right: 19.2708333333vw;
 }
 .services__gallery__transform {
+  height: 260px;
+  width: 285px;
   display: block;
-  width: 100%;
   transition: all 0.4s;
 }
 .services__gallery__transform:hover {
@@ -371,25 +372,32 @@ button a {
   width: 100%;
 }
 .services__gallery__transform__content {
+  background-color: #ffd401;
   font-family: Raleway;
   font-style: 500;
-  font-size: 0.8333333333vw;
-  line-height: 1.1458333333vw;
+  /*font-size: 16 / $width * 100vw;
+  line-height: 22 / $width * 100vw;
   color: #000;
-  min-height: 3.125vw;
-  padding: 0 2.2916666667vw 0 1.0416666667vw;
+  min-height: 60 / $width * 100vw;
+  padding: 0 44 / $width * 100vw 0 20 / $width * 100vw;*/
   display: flex;
   justify-content: space-between;
   align-items: center;
   transition: 0.5s;
   background-color: white;
 }
-.services__gallery__transform__tag {
+
+.content__tag {
+  background-color: #386641;
   display: block;
   font-weight: 700;
-  font-size: 0.9375vw;
-  line-height: 1.1458333333vw;
   color: #202020;
+}
+
+.content__images {
+  position: absolute;
+  height: 7px;
+  width: 9px;
 }
 
 /**********VIDEO****************/
