--- a/scss/main.scss
+++ b/scss/main.scss
@@ -368,8 +368,8 @@ button a {
     padding-left: 370 / $width * 100vw;
     padding-right: 370 / $width * 100vw;
     &__transform {
-      height: 260px;
-      width: 285px;
+      //height: 260px;
+      // width: 285px;
       display: block;
       transition: all 0.4s;
       &:hover {
@@ -383,33 +383,30 @@ button a {
           width: 100%;
         }
       }
+      &__content {
+        font-family: Raleway;
+        color: #000;
+        min-height: 60 / $width * 100vw;
+        //padding: 0 44 / $width * 100vw 0 20 / $width * 100vw;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        transition: 0.5s;
+        background-color: white;
+        &__tag {
+          display: block;
+          font-weight: 700;
+          font-size: 18 / $width * 100vw;
+          line-height: 22 / $width * 100vw;
+          color: #202020;
+        }
+        &__images,
+        img {
+          height: 24px;
+          width: 24px;
+        }
+      }
     }
-  }
-}
-&__content {
-  font-family: Raleway;
-  font-style: 500;
-  /*font-size: 16 / $width * 100vw;
-  line-height: 22 / $width * 100vw;
-  color: #000;
-  min-height: 60 / $width * 100vw;
-  padding: 0 44 / $width * 100vw 0 20 / $width * 100vw;*/
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  transition: 0.5s;
-  background-color: white;
-  &__tag {
-    background-color: aqua;
-    display: block;
-    font-weight: 700;
-    // font-size: 18 / $width * 100vw;
-    //line-height: 22 / $width * 100vw;
-    color: #202020;
-  }
-  &__images {
-    height: 7px;
-    width: 9px;
   }
 }
 
