--- a/scss/main.scss
+++ b/scss/main.scss
@@ -513,9 +513,10 @@ button a {
   }
 
   &__box {
-    padding: 60 / $width * 100vw 0;
+    //padding: 60 / $width * 100vw 0;
     text-align: center;
     width: 1170 / $width * 100vw;
+    height: 413 / $width * 100vw;
   }
   &__slideshow {
     margin-bottom: 30 / $width * 100vw;
@@ -620,11 +621,11 @@ button a {
   height: 27 / $width * 100vw;
   align-self: center;
   cursor: pointer;
-  transform: translate(-35 / $width * 100vw, 25 / $width * 100vw);
+  transform: translate(-42 / $width * 100vw, -6 / $width * 100vw);
 }
 .sliders__next {
   transform: rotate(180deg)
-    translate(-1170 / $width * 100vw, -25 / $width * 100vw);
+    translate(-1190 / $width * 100vw, 6 / $width * 100vw);
 }
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -635,16 +636,98 @@ button a {
     url("../images/garden.png") no-repeat;
   background-size: cover;
   position: relative;
+  height: 424 / $width * 100vw;
 
   &__body {
+    background-color: coral;
     margin: 0 auto;
     padding: 60 / $width * 100vw 0;
-    display: flex;
+    align-self: center;
     color: #fff;
-    font-size: 24 / $width * 100vw;
-    line-height: 36 / $width * 100vw;
+    //font-size: 24 / $width * 100vw;
+    //line-height: 36 / $width * 100vw;
   }
 }
+.response {
+  background-color: #96b93f;
+  display: flex;
+  //justify-content: center;
+  //text-align: center;
+  align-items: center;
+
+  &__hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin: 0 auto;
+    &__head {
+      height: 100 / $width * 100vw;
+      width: 358 / $width * 100vw;
+      margin-bottom: 40 / $width * 100vw;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      &__img {
+        margin: 0 auto;
+        border-radius: 50%;
+        overflow: hidden;
+        background: #478152;
+        flex-shrink: 0;
+        object-fit: cover;
+        img {
+          width: 100 / $width * 100vw;
+          height: 100 / $width * 100vw;
+        }
+      }
+
+      &__name {
+        h3 {
+          margin-top: 16px;
+          margin-bottom: 7px;
+          display: flex;
+          text-align: start;
+          align-items: start;
+          background-color: #4caf50;
+          font-weight: 600;
+          font-size: 24 / $width * 100vw;
+          line-height: 36 / $width * 100vw;
+          letter-spacing: 0.05em;
+        }
+
+        &__stars {
+          display: flex;
+          margin-right: 10px;
+          img {
+            height: 24 / $width * 100vw;
+            width: 24 / $width * 100vw;
+            text-align: center;
+            margin-right: 10px;
+          }
+        }
+      }
+    }
+
+    &__text {
+      background-color: #2c11d8;
+      max-width: 1000 / $width * 100vw;
+      height: 144 / $width * 100vw;
+      display: flex;
+      align-content: stretch;
+      margin-bottom: 30 / $width * 100vw;
+      font-weight: 500;
+      font-size: 24 / $width * 100vw;
+      line-height: 36 / $width * 100vw;
+      letter-spacing: 0.05em;
+      text-align: center;
+      color: #ffffff;
+      text-shadow: 0 / $width * 100vw 0 / $width * 100vw 4 / $width * 100vw
+        rgba(0, 0, 0, 0.25);
+    }
+  }
+}
+
 .reviews__prev,
 .reviews__next {
   position: absolute;
@@ -659,53 +742,6 @@ button a {
 .reviews__next {
   transform: rotate(180deg)
     translate(-1490 / $width * 100vw, -25 / $width * 100vw);
-}
-
-.response {
-  &__body {
-    max-width: 1000 / $width * 100vw;
-    margin: 0 auto;
-    text-align: center;
-  }
-  &__head {
-    margin-bottom: 40 / $width * 100vw;
-  }
-
-  &__img {
-    margin: 0 auto;
-    width: 100 / $width * 100vw;
-    height: 100 / $width * 100vw;
-    border-radius: 50%;
-    overflow: hidden;
-    background: #478152;
-    flex-shrink: 0;
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  }
-
-  &__name {
-    h3 {
-      font-weight: 600;
-      letter-spacing: 0.05em;
-    }
-  }
-
-  &__stars {
-    text-align: center;
-    letter-spacing: 10 / $width * 100vw;
-    color: #ffd401;
-  }
-
-  &__text {
-    margin-bottom: 30 / $width * 100vw;
-    font-weight: 500;
-    text-align: center;
-    text-shadow: 0 / $width * 100vw 0 / $width * 100vw 4 / $width * 100vw
-      rgba(0, 0, 0, 0.25);
-  }
 }
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
