--- a/styles/main.css
+++ b/styles/main.css
@@ -490,9 +490,9 @@ button a {
   color: #202020;
 }
 .favorites__box {
-  padding: 3.125vw 0;
   text-align: center;
   width: 60.9375vw;
+  height: 21.5104166667vw;
 }
 .favorites__slideshow {
   margin-bottom: 1.5625vw;
@@ -592,11 +592,11 @@ button a {
   height: 1.40625vw;
   align-self: center;
   cursor: pointer;
-  transform: translate(-1.8229166667vw, 1.3020833333vw);
+  transform: translate(-2.1875vw, -0.3125vw);
 }
 
 .sliders__next {
-  transform: rotate(180deg) translate(-60.9375vw, -1.3020833333vw);
+  transform: rotate(180deg) translate(-61.9791666667vw, 0.3125vw);
 }
 
 /**********REVIEWS ****************/
@@ -604,14 +604,85 @@ button a {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.524), rgba(0, 0, 0, 0.7)), url("../images/garden.png") no-repeat;
   background-size: cover;
   position: relative;
+  height: 22.0833333333vw;
 }
 .reviews__body {
+  background-color: coral;
   margin: 0 auto;
   padding: 3.125vw 0;
-  display: flex;
+  align-self: center;
   color: #fff;
+}
+
+.response {
+  background-color: #96b93f;
+  display: flex;
+  align-items: center;
+}
+.response__hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  margin: 0 auto;
+}
+.response__hero__head {
+  height: 5.2083333333vw;
+  width: 18.6458333333vw;
+  margin-bottom: 2.0833333333vw;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+.response__hero__head__img {
+  margin: 0 auto;
+  border-radius: 50%;
+  overflow: hidden;
+  background: #478152;
+  flex-shrink: 0;
+  object-fit: cover;
+}
+.response__hero__head__img img {
+  width: 5.2083333333vw;
+  height: 5.2083333333vw;
+}
+.response__hero__head__name h3 {
+  margin-top: 16px;
+  margin-bottom: 7px;
+  display: flex;
+  text-align: start;
+  align-items: start;
+  background-color: #4caf50;
+  font-weight: 600;
   font-size: 1.25vw;
   line-height: 1.875vw;
+  letter-spacing: 0.05em;
+}
+.response__hero__head__name__stars {
+  display: flex;
+  margin-right: 10px;
+}
+.response__hero__head__name__stars img {
+  height: 1.25vw;
+  width: 1.25vw;
+  text-align: center;
+  margin-right: 10px;
+}
+.response__hero__text {
+  background-color: #2c11d8;
+  max-width: 52.0833333333vw;
+  height: 7.5vw;
+  display: flex;
+  align-content: stretch;
+  margin-bottom: 1.5625vw;
+  font-weight: 500;
+  font-size: 1.25vw;
+  line-height: 1.875vw;
+  letter-spacing: 0.05em;
+  text-align: center;
+  color: #ffffff;
+  text-shadow: 0vw 0vw 0.2083333333vw rgba(0, 0, 0, 0.25);
 }
 
 .reviews__prev,
@@ -628,44 +699,6 @@ button a {
 
 .reviews__next {
   transform: rotate(180deg) translate(-77.6041666667vw, -1.3020833333vw);
-}
-
-.response__body {
-  max-width: 52.0833333333vw;
-  margin: 0 auto;
-  text-align: center;
-}
-.response__head {
-  margin-bottom: 2.0833333333vw;
-}
-.response__img {
-  margin: 0 auto;
-  width: 5.2083333333vw;
-  height: 5.2083333333vw;
-  border-radius: 50%;
-  overflow: hidden;
-  background: #478152;
-  flex-shrink: 0;
-}
-.response__img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.response__name h3 {
-  font-weight: 600;
-  letter-spacing: 0.05em;
-}
-.response__stars {
-  text-align: center;
-  letter-spacing: 0.5208333333vw;
-  color: #ffd401;
-}
-.response__text {
-  margin-bottom: 1.5625vw;
-  font-weight: 500;
-  text-align: center;
-  text-shadow: 0vw 0vw 0.2083333333vw rgba(0, 0, 0, 0.25);
 }
 
 /**********FORMS ****************/
