--- a/scss/main.scss
+++ b/scss/main.scss
@@ -513,13 +513,12 @@ button a {
   }
 
   &__box {
-    //padding: 60 / $width * 100vw 0;
+    padding: 60 / $width * 100vw 0 80 / $width * 100vw 0;
     text-align: center;
     width: 1170 / $width * 100vw;
     height: 413 / $width * 100vw;
   }
   &__slideshow {
-    margin-bottom: 30 / $width * 100vw;
     display: flex;
     justify-content: space-between;
   }
@@ -639,20 +638,15 @@ button a {
   height: 424 / $width * 100vw;
 
   &__body {
-    background-color: coral;
+    position: relative;
     margin: 0 auto;
     padding: 60 / $width * 100vw 0;
     align-self: center;
     color: #fff;
-    //font-size: 24 / $width * 100vw;
-    //line-height: 36 / $width * 100vw;
   }
 }
 .response {
-  background-color: #96b93f;
   display: flex;
-  //justify-content: center;
-  //text-align: center;
   align-items: center;
 
   &__hero {
@@ -710,14 +704,13 @@ button a {
     }
 
     &__text {
-      background-color: #2c11d8;
       max-width: 1000 / $width * 100vw;
       height: 144 / $width * 100vw;
       display: flex;
       align-content: stretch;
       margin-bottom: 30 / $width * 100vw;
       font-weight: 500;
-      font-size: 24 / $width * 100vw;
+      font-size: 23 / $width * 100vw;
       line-height: 36 / $width * 100vw;
       letter-spacing: 0.05em;
       text-align: center;
@@ -736,12 +729,12 @@ button a {
   height: 27 / $width * 100vw;
   align-self: center;
   cursor: pointer;
-  transform: translate(400 / $width * 100vw, 25 / $width * 100vw);
-  z-index: 10;
+  transform: translate(360 / $width * 100vw, 132 / $width * 100vw);
+  z-index: 1000;
 }
 .reviews__next {
   transform: rotate(180deg)
-    translate(-1490 / $width * 100vw, -25 / $width * 100vw);
+    translate(-1519 / $width * 100vw, 180 / $width * 100vw);
 }
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
