--- a/scss/main.scss
+++ b/scss/main.scss
@@ -683,7 +683,6 @@ button a {
           display: flex;
           text-align: start;
           align-items: start;
-          background-color: #4caf50;
           font-weight: 600;
           font-size: 24 / $width * 100vw;
           line-height: 36 / $width * 100vw;
@@ -926,8 +925,6 @@ button a {
   }
   &__copyright {
     height: 56 / $width * 100vw;
-    //padding-top: 17 / $width * 100vw;
-    //padding-bottom: 10 / $width * 100vw;
     background: #454751;
     font-weight: 400;
     &__row {
@@ -941,6 +938,7 @@ button a {
 
     &__text,
     &__text a {
+      text-decoration: none;
       margin-top: 15 / $width * 100vw;
       height: 26 / $width * 100vw;
       width: 212 / $width * 100vw;
@@ -950,17 +948,20 @@ button a {
 
       a:hover {
         color: #fff;
+        text-decoration: underline;
       }
     }
 
     &__terms,
     &__terms a {
+      text-decoration: none;
       margin-top: 15 / $width * 100vw;
       font-size: 12 / $width * 100vw;
       line-height: 20 / $width * 100vw;
       color: #adbdcc;
       a:hover {
         color: #fff;
+        text-decoration: underline;
       }
     }
   }
