--- a/scss/queries.scss
+++ b/scss/queries.scss
@@ -1,6 +1,30 @@
+//$width: 1920;
 /**************************/
 /* BELOW 1344px (Smaller desktops) */
 /**************************/
+@media only screen and (min-width: 480px) {
+  .hero__text-box__description {
+    &__paragraph {
+      background-color: rgb(60, 36, 99);
+      margin: 0 auto;
+      padding: 30px 0;
+      max-width: 450px;
+    }
+  }
+  ///////////////
+  .services {
+    &__text-box {
+      background-color: aqua;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      p {
+        max-width: 580px;
+      }
+    }
+  }
+}
 
 //@media (max-width: 1344px) {
 
