--- a/styles/queries.css
+++ b/styles/queries.css
@@ -1,6 +1,23 @@
 /**************************/
 /* BELOW 1344px (Smaller desktops) */
 /**************************/
+@media only screen and (min-width: 480px) {
+  .hero__text-box__description__paragraph {
+    background-color: rgb(60, 36, 99);
+    margin: 0 auto;
+    padding: 30px 0;
+    max-width: 450px;
+  }
+  .services__text-box {
+    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .services__text-box p {
+    max-width: 580px;
+  }
+}
 /**************************/
 /* BELOW 1200px (Landscape Tablets) */
 /**************************/
