--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,5 @@
 @import url("../styles/normalize.css");
-@import url("../scss/queries.scss");
+@import url("../styles/queries.css");
 
 $width: 1920;
 
@@ -522,6 +522,7 @@ button a {
   }
 
   &__box {
+    background-color: #0e0a83;
     padding: 60 / $width * 100vw 0 80 / $width * 100vw 0;
     text-align: center;
     width: 1170 / $width * 100vw;
