--- a/scss/queries.scss
+++ b/scss/queries.scss
@@ -2,7 +2,7 @@
 /**************************/
 /* BELOW 1344px (Smaller desktops) */
 /**************************/
-@media only screen and (min-width: 480px) {
+/*@media only screen and (min-width: 480px) {
   .hero__text-box__description {
     &__paragraph {
       background-color: rgb(60, 36, 99);
