--- a/scss/main.scss
+++ b/scss/main.scss
@@ -263,6 +263,22 @@ button a {
     }
   }
 }
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+
+  display: none;
+  img {
+    height: 48 / $width * 100vw;
+    width: 48 / $width * 100vw;
+    color: #333;
+  }
+}
+img[name="close-outline"] {
+  display: none;
+}
+
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 /**********SECTION HERO****************/
 
