--- a/styles/queries.css
+++ b/styles/queries.css
@@ -1,11 +1,186 @@
 /**************************/
-/* BELOW 1344px (Smaller desktops) */
+/* BELOW 944/ $width * 100vw (Tablets) */
 /**************************/
+@media (max-width: 944px) {
+  /* MOBILE NAVIGATION */
+  .btn-mobile-nav {
+    display: block;
+    z-index: 2000;
+  }
+  .header__wrapper-bottom {
+    background-color: rgba(56, 102, 65, 0.853);
+    -webkit-backdrop-filter: blur(0.5208333333vw);
+    backdrop-filter: blur(0.5208333333vw);
+    position: absolute;
+    color: black;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 52.6041666667vw;
+    transform: translateX(100%);
+    transition: all 0.5s ease-in;
+    /* Hide navigation */
+    /* Allows NO transitions at all */
+    /* display: none; */
+    /* 1) Hide it visually */
+    opacity: 0;
+    /* 2) Make it unaccessible to mouse and keyboard */
+    pointer-events: none;
+    /* 3) Hide it from screen readers */
+    visibility: hidden;
+  }
+  .nav-open .header__wrapper-bottom {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0);
+  }
+  .nav-open img[name=close-outline] {
+    display: block;
+  }
+  .nav-open img[name=menu-outline] {
+    display: none;
+  }
+  .dropdown {
+    font-family: Raleway;
+    background-color: #386641;
+    max-width: 100vw;
+    top: 6.25vw;
+    padding: 0.2604166667vw;
+    border: 0.1041666667vw solid #4caf50;
+    font-weight: 600;
+    right: 0;
+    z-index: 1000;
+  }
+  .dropdown.fixed {
+    position: fixed;
+    left: 0;
+    top: 0;
+    opacity: 0.9;
+  }
+  .dropdown .d-flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .dropdown .header__wrapper-bottom {
+    text-transform: uppercase;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list {
+    margin-top: 13.0208333333vw;
+    margin-left: 7.8125vw;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 64.5833333333vw;
+    height: 57.2916666667vw;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__submenu {
+    position: absolute;
+    left: 13.0208333333vw;
+    width: 20.8333333333vw;
+    margin-top: 0;
+    background-color: rgba(56, 102, 65, 0.795);
+    display: none;
+    padding: 0.2083333333vw 1.0416666667vw;
+    transform: translate(-1.0416666667vw, 2.0833333333vw);
+    border-radius: 0.2604166667vw;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__submenu__child {
+    width: 100%;
+    height: 1.8229166667vw;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__submenu__child a {
+    line-height: 1.5625vw;
+    font-size: 1.25vw;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__submenu__child a::after {
+    display: none;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__item {
+    margin-right: 1.875vw;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__item::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -0.1041666667vw;
+    width: 0%;
+    height: 0.1041666667vw;
+    background: #ffd401;
+    transition: width 0.4s;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__item:hover::before {
+    width: 100%;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__item:nth-child(1) {
+    margin-right: 2.03125vw;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__item:nth-child(2) {
+    margin-right: 2.34375vw;
+    position: relative;
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__item:nth-child(2) a::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: -1.5625vw;
+    height: 2.0833333333vw;
+    width: 2.0833333333vw;
+    background-image: url("../images/icons/sub-menu_arrow.svg");
+    background-size: 1.5625vw 1.0416666667vw;
+    background-position: center;
+    background-repeat: no-repeat;
+    transform: translateX(100%);
+  }
+  .dropdown .header__wrapper-bottom .header__main-list__item:nth-child(8) {
+    margin-right: 0;
+  }
+  .dropdown .header__wrapper-bottom ul {
+    list-style: none;
+  }
+  .dropdown .header__wrapper-bottom ul li {
+    height: 2.8645833333vw;
+    position: relative;
+    text-align: center;
+    align-self: center;
+    margin-bottom: 0.78125vw;
+  }
+  .dropdown .header__wrapper-bottom ul li a img {
+    width: 3.6458333333vw;
+    height: 2.8645833333vw;
+    color: #fff;
+    filter: brightness(0) invert(10);
+  }
+  .dropdown .header__wrapper-bottom ul li a {
+    font-size: 1.875vw;
+    line-height: 2.6041666667vw;
+    color: #fff;
+    display: block;
+    text-decoration: none;
+  }
+  .dropdown .header__wrapper-bottom ul li:hover > ul {
+    display: initial;
+  }
+}
+/*
+  .header__main-list {
+    flex-direction: column;
+    gap: 4.8rem;
+  }
+
+  .header__main-list__item:link,
+  .header__main-list__item:visited {
+    font-size: 3rem;
+  }
+}*/
+/* BELOW 1344/ $width * 100vw (Smaller desktops) */
+/****************************/
 @media only screen and (max-width: 480px) {
   .hero__text-box__description__paragraph {
     background-color: rgb(60, 36, 99);
     margin: 0 auto;
-    max-width: 450px;
+    max-width: 23.4375vw;
   }
   .services__text-box {
     background-color: aqua;
@@ -14,18 +189,18 @@
     align-items: center;
   }
   .services__text-box p {
-    max-width: 580px;
+    max-width: 30.2083333333vw;
   }
 }
 /**************************/
-/* BELOW 1200px (Landscape Tablets) */
+/* BELOW 1200/ $width * 100vw (Landscape Tablets) */
 /**************************/
 /**************************/
-/* BELOW 944px (Tablets) */
+/* BELOW 944/ $width * 100vw (Tablets) */
 /**************************/
 /**************************/
-/* BELOW 704px (Smaller tablets) */
+/* BELOW 704/ $width * 100vw (Smaller tablets) */
 /**************************/
 /**************************/
-/* BELOW 544px (Phones) */
+/* BELOW 544/ $width * 100vw (Phones) */
 /**************************//*# sourceMappingURL=queries.css.map */
