--- a/scss/queries.scss
+++ b/scss/queries.scss
@@ -1,9 +1,81 @@
-$width: 1920;
+//$width: 1920;
 /**************************/
 /* BELOW 944/ $width * 100vw (Tablets) */
 /**************************/
 
 @media (max-width: 944px) {
+  $width: 944;
+  .header {
+    &__wrapper-top {
+      padding: 20 / $width * 100vw 0 0;
+      &__row {
+        max-width: 844 / $width * 100vw;
+      }
+    }
+  }
+
+  .container-large {
+    max-width: 844 / $width * 100vw;
+  }
+  .section-hero {
+    max-width: 944 / $width * 100vw;
+  }
+
+  .hero {
+    &__img-box {
+      &__img {
+        height: 400 / $width * 100vw;
+        width: 544 / $width * 100vw;
+      }
+    }
+    &__text-box {
+      margin-left: 60 / $width * 100vw;
+      width: 350 / $width * 100vw;
+      &__btn {
+        margin-left: 0 / $width * 100vw;
+        padding: 17 / $width * 100vw 40 / $width * 100vw;
+      }
+      &__primary {
+        height: 118 / $width * 100vw;
+        width: 350 / $width * 100vw;
+        font-weight: 800;
+        line-height: 59 / $width * 100vw;
+        font-size: 50 / $width * 100vw;
+
+        margin-top: 80 / $width * 100vw;
+        margin-bottom: 20 / $width * 100vw;
+      }
+      &__tag-title {
+        height: 20 / $width * 100vw;
+        width: 264 / $width * 100vw;
+        text-transform: uppercase;
+        font-weight: 700;
+        font-size: 22 / $width * 100vw;
+        line-height: 20 / $width * 100vw;
+        //margin-left: 365 / $width * 100vw;
+        margin-top: 20 / $width * 100vwx;
+        color: #386641;
+      }
+      &__description {
+        height: 168 / $width * 100vw;
+        width: 340 / $width * 100vw;
+        //margin-left: 365 / $width * 100vw;
+        margin-bottom: 33 / $width * 100vw;
+        margin-top: 30 / $width * 100vw;
+        font-size: 16 / $width * 100vw;
+        line-height: 24 / $width * 100vw;
+        font-weight: 500;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        &__paragraph {
+          span {
+            font-weight: 700;
+          }
+        }
+      }
+    }
+  }
   /* MOBILE NAVIGATION */
   .btn-mobile-nav {
     display: block;
@@ -19,7 +91,7 @@ $width: 1920;
     color: black;
     top: 0;
     left: 0;
-    width: 1920 / $width * 100vw;
+    width: 944 / $width * 100vw;
     height: 1010 / $width * 100vw;
     transform: translateX(100%);
     transition: all 0.5s ease-in;
@@ -56,7 +128,7 @@ $width: 1920;
   .dropdown {
     font-family: Raleway;
     background-color: #386641;
-    max-width: 1920 / $width * 100vw;
+    max-width: 944 / $width * 100vw;
     top: 120 / $width * 100vw;
     padding: 5 / $width * 100vw;
     border: 2 / $width * 100vw solid #4caf50;
@@ -84,7 +156,7 @@ $width: 1920;
         display: flex;
         flex-direction: column;
         text-align: center;
-        width: 1240 / $width * 100vw;
+        width: 844 / $width * 100vw;
         height: 1100 / $width * 100vw;
         &__submenu {
           position: absolute;
@@ -192,6 +264,7 @@ $width: 1920;
 
 //////////////////////////////
 @media only screen and (max-width: 480px) {
+  $width: 480;
   .hero__text-box__description {
     &__paragraph {
       background-color: rgb(60, 36, 99);
@@ -208,7 +281,7 @@ $width: 1920;
       align-items: center;
 
       p {
-        max-width: 580 / $width * 100vw;
+        max-width: 320 / $width * 100vw;
       }
     }
   }
