--- a/styles/queries.css
+++ b/styles/queries.css
@@ -2,6 +2,64 @@
 /* BELOW 944/ $width * 100vw (Tablets) */
 /**************************/
 @media (max-width: 944px) {
+  .header__wrapper-top {
+    padding: 2.1186440678vw 0 0;
+  }
+  .header__wrapper-top__row {
+    max-width: 89.406779661vw;
+  }
+  .container-large {
+    max-width: 89.406779661vw;
+  }
+  .section-hero {
+    max-width: 100vw;
+  }
+  .hero__img-box__img {
+    height: 42.3728813559vw;
+    width: 57.6271186441vw;
+  }
+  .hero__text-box {
+    margin-left: 6.3559322034vw;
+    width: 37.0762711864vw;
+  }
+  .hero__text-box__btn {
+    margin-left: 0vw;
+    padding: 1.8008474576vw 4.2372881356vw;
+  }
+  .hero__text-box__primary {
+    height: 12.5vw;
+    width: 37.0762711864vw;
+    font-weight: 800;
+    line-height: 6.25vw;
+    font-size: 5.2966101695vw;
+    margin-top: 8.4745762712vw;
+    margin-bottom: 2.1186440678vw;
+  }
+  .hero__text-box__tag-title {
+    height: 2.1186440678vw;
+    width: 27.9661016949vw;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 2.3305084746vw;
+    line-height: 2.1186440678vw;
+    margin-top: 2.1186440678vwx;
+    color: #386641;
+  }
+  .hero__text-box__description {
+    height: 17.7966101695vw;
+    width: 36.0169491525vw;
+    margin-bottom: 3.4957627119vw;
+    margin-top: 3.1779661017vw;
+    font-size: 1.6949152542vw;
+    line-height: 2.5423728814vw;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .hero__text-box__description__paragraph span {
+    font-weight: 700;
+  }
   /* MOBILE NAVIGATION */
   .btn-mobile-nav {
     display: block;
@@ -9,14 +67,14 @@
   }
   .header__wrapper-bottom {
     background-color: rgba(56, 102, 65, 0.853);
-    -webkit-backdrop-filter: blur(0.5208333333vw);
-    backdrop-filter: blur(0.5208333333vw);
+    -webkit-backdrop-filter: blur(1.0593220339vw);
+    backdrop-filter: blur(1.0593220339vw);
     position: absolute;
     color: black;
     top: 0;
     left: 0;
     width: 100vw;
-    height: 52.6041666667vw;
+    height: 106.9915254237vw;
     transform: translateX(100%);
     transition: all 0.5s ease-in;
     /* Hide navigation */
@@ -45,9 +103,9 @@
     font-family: Raleway;
     background-color: #386641;
     max-width: 100vw;
-    top: 6.25vw;
-    padding: 0.2604166667vw;
-    border: 0.1041666667vw solid #4caf50;
+    top: 12.7118644068vw;
+    padding: 0.5296610169vw;
+    border: 0.2118644068vw solid #4caf50;
     font-weight: 600;
     right: 0;
     z-index: 1000;
@@ -67,46 +125,46 @@
     text-transform: uppercase;
   }
   .dropdown .header__wrapper-bottom .header__main-list {
-    margin-top: 13.0208333333vw;
-    margin-left: 7.8125vw;
+    margin-top: 26.4830508475vw;
+    margin-left: 15.8898305085vw;
     display: flex;
     flex-direction: column;
     text-align: center;
-    width: 64.5833333333vw;
-    height: 57.2916666667vw;
+    width: 89.406779661vw;
+    height: 116.5254237288vw;
   }
   .dropdown .header__wrapper-bottom .header__main-list__submenu {
     position: absolute;
-    left: 13.0208333333vw;
-    width: 20.8333333333vw;
+    left: 26.4830508475vw;
+    width: 42.3728813559vw;
     margin-top: 0;
     background-color: rgba(56, 102, 65, 0.795);
     display: none;
-    padding: 0.2083333333vw 1.0416666667vw;
-    transform: translate(-1.0416666667vw, 2.0833333333vw);
-    border-radius: 0.2604166667vw;
+    padding: 0.4237288136vw 2.1186440678vw;
+    transform: translate(-2.1186440678vw, 4.2372881356vw);
+    border-radius: 0.5296610169vw;
   }
   .dropdown .header__wrapper-bottom .header__main-list__submenu__child {
     width: 100%;
-    height: 1.8229166667vw;
+    height: 3.7076271186vw;
   }
   .dropdown .header__wrapper-bottom .header__main-list__submenu__child a {
-    line-height: 1.5625vw;
-    font-size: 1.25vw;
+    line-height: 3.1779661017vw;
+    font-size: 2.5423728814vw;
   }
   .dropdown .header__wrapper-bottom .header__main-list__submenu__child a::after {
     display: none;
   }
   .dropdown .header__wrapper-bottom .header__main-list__item {
-    margin-right: 1.875vw;
+    margin-right: 3.813559322vw;
   }
   .dropdown .header__wrapper-bottom .header__main-list__item::before {
     content: "";
     position: absolute;
     left: 0;
-    bottom: -0.1041666667vw;
+    bottom: -0.2118644068vw;
     width: 0%;
-    height: 0.1041666667vw;
+    height: 0.2118644068vw;
     background: #ffd401;
     transition: width 0.4s;
   }
@@ -114,21 +172,21 @@
     width: 100%;
   }
   .dropdown .header__wrapper-bottom .header__main-list__item:nth-child(1) {
-    margin-right: 2.03125vw;
+    margin-right: 4.1313559322vw;
   }
   .dropdown .header__wrapper-bottom .header__main-list__item:nth-child(2) {
-    margin-right: 2.34375vw;
+    margin-right: 4.7669491525vw;
     position: relative;
   }
   .dropdown .header__wrapper-bottom .header__main-list__item:nth-child(2) a::after {
     content: "";
     position: absolute;
     top: 0;
-    right: -1.5625vw;
-    height: 2.0833333333vw;
-    width: 2.0833333333vw;
+    right: -3.1779661017vw;
+    height: 4.2372881356vw;
+    width: 4.2372881356vw;
     background-image: url("../images/icons/sub-menu_arrow.svg");
-    background-size: 1.5625vw 1.0416666667vw;
+    background-size: 3.1779661017vw 2.1186440678vw;
     background-position: center;
     background-repeat: no-repeat;
     transform: translateX(100%);
@@ -140,21 +198,21 @@
     list-style: none;
   }
   .dropdown .header__wrapper-bottom ul li {
-    height: 2.8645833333vw;
+    height: 5.8262711864vw;
     position: relative;
     text-align: center;
     align-self: center;
-    margin-bottom: 0.78125vw;
+    margin-bottom: 1.5889830508vw;
   }
   .dropdown .header__wrapper-bottom ul li a img {
-    width: 3.6458333333vw;
-    height: 2.8645833333vw;
+    width: 7.4152542373vw;
+    height: 5.8262711864vw;
     color: #fff;
     filter: brightness(0) invert(10);
   }
   .dropdown .header__wrapper-bottom ul li a {
-    font-size: 1.875vw;
-    line-height: 2.6041666667vw;
+    font-size: 3.813559322vw;
+    line-height: 5.2966101695vw;
     color: #fff;
     display: block;
     text-decoration: none;
@@ -169,7 +227,7 @@
   .hero__text-box__description__paragraph {
     background-color: rgb(60, 36, 99);
     margin: 0 auto;
-    max-width: 23.4375vw;
+    max-width: 93.75vw;
   }
   .services__text-box {
     background-color: aqua;
@@ -178,7 +236,7 @@
     align-items: center;
   }
   .services__text-box p {
-    max-width: 30.2083333333vw;
+    max-width: 66.6666666667vw;
   }
 }
 /**************************/
